--- a/themes/rhino3d.com-theme/layouts/shortcodes/3dm.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/3dm.html
@@ -35,7 +35,7 @@
     }
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script>
+<script src="{{ (resources.Get "/script/lodash.min.js" | resources.Fingerprint).Permalink }}"></script>
 
 <div style="display: flex; justify-content: center; flex-direction: column; position: relative;">
     <canvas id="canvas-{{ $id }}" style="width: {{ $width }}; height: {{ $height }}; margin: auto;"></canvas>
