--- a/themes/rhino3d.com-theme/layouts/partials/mathjax_support.html
+++ b/themes/rhino3d.com-theme/layouts/partials/mathjax_support.html
@@ -1,7 +1,7 @@
 <!-- Mathjax support starts -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script type="text/javascript" async
-src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+src="https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js">
   MathJax.Hub.Config({
   tex2jax: {
     inlineMath: [['$','$'], ['\\(','\\)']],
