--- a/layouts/shortcodes/rhinoscriptsyntax.html
+++ b/layouts/shortcodes/rhinoscriptsyntax.html
@@ -1,42 +1,63 @@
 {{ range .Site.Data.rhinoscriptsyntax }}
   {{ $module := . }}
+  
   <h2 id="{{$module.ModuleName}}">{{ $module.ModuleName }}</h2>
 
   {{ range $module.functions }}
-    <h3 id="{{$module.ModuleName}}-{{.Name}}">{{ .Name }}</h3>
-
-    <pre style="white-space: pre-wrap;"><code class="language-python">{{ .Signature }}</code></pre>
-
-    <!-- <pre>{{ .Description }}</pre> -->
-    <span>{{ .Description }}</span>
     
-    {{ if .HasArguments }}
-    <h5>Parameters:</h4>
-    <div>
-      <pre style="white-space: pre-wrap;">{{ .ArgumentDesc }}</pre>
-    </div>
-    {{ end }}
+    <a role="button" class="code_accordion" onclick="window.location.hash = '#{{$module.ModuleName}}-{{.Name}}';"><div id="{{$module.ModuleName}}-{{.Name}}">{{ .Name }}</div></a>
 
-    <h5>Returns:</h5>
-    <div>
-      <pre style="white-space: pre-wrap;">{{ .ReturnStr }}</pre>
-    </div>
+    <div class="code_panel">
+      <pre style="white-space: pre-wrap;"><code class="language-python">{{ .Signature }}</code></pre>
 
-    {{ with .ExampleString }}
-    <h5>Example:</h5>
-    <div>
-      <pre style="white-space: pre-wrap;"><code class="language-python">{{ . }}</code></pre>
-    </div>
-    {{ end }}
-
-    {{ if gt (len .SeeAlso) 0 }}
-    <h5>See Also:</h5>
-    <ul>
-      {{ range .SeeAlso }}
-        <li><a href="#{{ $module.ModuleName }}-{{ .FunctionName }}">{{ .FunctionName }}</a></li>
+      <span>{{ .Description }}</span>
+      
+      {{ if .HasArguments }}
+      <h5>Parameters:</h4>
+      <div>
+        <pre style="white-space: pre-wrap;">{{ .ArgumentDesc }}</pre>
+      </div>
       {{ end }}
-    </ul>
-    {{ end }}
-    <br/>
+
+      <h5>Returns:</h5>
+      <div>
+        <pre style="white-space: pre-wrap;">{{ .ReturnStr }}</pre>
+      </div>
+
+      {{ with .ExampleString }}
+      <h5>Example:</h5>
+      <div>
+        <pre style="white-space: pre-wrap;"><code class="language-python">{{ . }}</code></pre>
+      </div>
+      {{ end }}
+
+      {{ if gt (len .SeeAlso) 0 }}
+      <h5>See Also:</h5>
+      <ul>
+        {{ range .SeeAlso }}
+          <!-- <li><a href="#{{ $module.ModuleName }}-{{ .FunctionName }}">{{ .FunctionName }}</a></li>-->
+          <li><a role="button" onclick="$('#{{ $module.ModuleName }}-{{ .FunctionName }}').click(); location.hash = '#{{ $module.ModuleName }}-{{ .FunctionName }}';">{{ .FunctionName }}</a></li>
+        {{ end }}
+      </ul>
+      {{ end }}
+      <br/>
+    </div>
   {{ end }}
 {{ end }}
+
+<script type="text/javascript">
+  var acc = document.getElementsByClassName("code_accordion");
+  var i;
+
+  for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.maxHeight) {
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      }
+    });
+  }
+</script>
