--- a/static/scss/_overrides.scss
+++ b/static/scss/_overrides.scss
@@ -132,3 +132,27 @@ tbody.index_table tr td{
 	padding-top: 32px;
 	padding-bottom: 32px;
 }
+
+
+/*
+##############################################################################
+## RhinoScriptSyntax API docs
+##############################################################################
+*/
+
+.code_accordion {
+	color: #337ab7;
+	cursor: pointer;
+	text-align: left;
+	border: none;
+	outline: none;
+	transition: 0.2s linear;
+  }
+
+  .code_panel {
+	padding: 0 18px;
+	background-color: white;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s linear;
+  }
