rhinoscriptsyntax: expand instead of toggle when clicking search result link

--- a/layouts/shortcodes/rhinoscriptsyntax.html
+++ b/layouts/shortcodes/rhinoscriptsyntax.html
@@ -120,7 +120,7 @@
    searchResultClick = function (mn, fn) {
      $("#rsssearch_popover").slideUp(1);
      const element = document.getElementById(mn + "-" + fn);
-     toggleAccordion(element.parentElement);
+     expandAccordion(element.parentElement);
      location.hash = "#" + mn + "-" + fn;
    }
    $("#rsssearch").on("keyup input", function (e) {
