--- a/themes/rhino3d.com-theme/assets/scss/_page/_learn.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_page/_learn.scss
@@ -194,6 +194,7 @@ div.learn_gallery_page {
 
 .discover-thumbnail {
 	overflow: hidden;
+	cursor: pointer;
 }
 
 .discover-thumbnail img {
@@ -254,6 +255,7 @@ div.learn_gallery_page {
 	text-overflow: ellipsis;
 	text-decoration: none;
 	max-width: 300px;
+	cursor: pointer;
 }
 
 .discover-info-subtitle {}
@@ -364,6 +366,7 @@ div.learn_gallery_page {
 	/* height: 26px; */
 	font-size: 13px;
 	border-left: 3px solid transparent;
+	width: 100%;
 }
 
 .discover-filter-featured-icon {
@@ -434,7 +437,7 @@ div.learn_gallery_page {
 	display: block;
 	width: 100%;
 	height: 30px;
-	margin: 5px 0px;
+	margin: 10px 0px;
 	padding: 2px 5px;
 	border: 1px solid #d0d0d0;
 	border-radius: 3px;
@@ -458,6 +461,16 @@ div.learn_gallery_page {
 
 .learn-title {
 	display: none;
+}
+
+.learn-tagbox-hidden {
+	height: 24px;
+	overflow: hidden;
+}
+
+.learn-tagbox-expanded {
+	height: fit-content;
+	overflow: visible;
 }
 
 @media only screen and (max-width: 1145px) {
@@ -523,3 +536,319 @@ div.learn_gallery_page {
 .learn-card-override {
 	max-width: none;
  }
+
+/*  partial copy from netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.css  */
+
+
+.modal-open {
+	overflow: hidden;
+  }
+  
+  .modal-open .modal {
+	overflow-x: hidden;
+	overflow-y: auto;
+  }
+  
+  .modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1050;
+	display: none;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	outline: 0;
+  }
+  
+  .modal-dialog {
+	position: relative;
+	width: auto;
+	margin: 0.5rem;
+	pointer-events: none;
+  }
+  
+  .modal.fade .modal-dialog {
+	transition: -webkit-transform 0.3s ease-out;
+	transition: transform 0.3s ease-out;
+	transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+	-webkit-transform: translate(0, -50px);
+	transform: translate(0, -50px);
+  }
+  
+  @media (prefers-reduced-motion: reduce) {
+	.modal.fade .modal-dialog {
+	  transition: none;
+	}
+  }
+  
+  .modal.show .modal-dialog {
+	-webkit-transform: none;
+	transform: none;
+  }
+  
+  .modal-dialog-scrollable {
+	display: -ms-flexbox;
+	display: flex;
+	max-height: calc(100% - 1rem);
+  }
+  
+  .modal-dialog-scrollable .modal-content {
+	max-height: calc(100vh - 1rem);
+	overflow: hidden;
+  }
+  
+  .modal-dialog-scrollable .modal-header,
+  .modal-dialog-scrollable .modal-footer {
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+  }
+  
+  .modal-dialog-scrollable .modal-body {
+	overflow-y: auto;
+  }
+  
+  .modal-dialog-centered {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-align: center;
+	align-items: center;
+	min-height: calc(100% - 1rem);
+  }
+  
+  .modal-dialog-centered::before {
+	display: block;
+	height: calc(100vh - 1rem);
+	content: "";
+  }
+  
+  .modal-dialog-centered.modal-dialog-scrollable {
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-ms-flex-pack: center;
+	justify-content: center;
+	height: 100%;
+  }
+  
+  .modal-dialog-centered.modal-dialog-scrollable .modal-content {
+	max-height: none;
+  }
+  
+  .modal-dialog-centered.modal-dialog-scrollable::before {
+	content: none;
+  }
+  
+  .modal-content {
+	position: relative;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	width: 100%;
+	pointer-events: auto;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-radius: 0.3rem;
+	outline: 0;
+  }
+  
+  .modal-backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1040;
+	width: 100vw;
+	height: 100vh;
+	background-color: #000;
+  }
+  
+  .modal-backdrop.fade {
+	opacity: 0;
+  }
+  
+  .modal-backdrop.show {
+	opacity: 0.5;
+  }
+  
+  .modal-header {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-align: start;
+	align-items: flex-start;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	padding: 1rem 1rem;
+	border-bottom: 1px solid #dee2e6;
+	border-top-left-radius: 0.3rem;
+	border-top-right-radius: 0.3rem;
+  }
+  
+  .modal-header .close {
+	padding: 1rem 1rem;
+	margin: -1rem -1rem -1rem auto;
+  }
+  
+  .modal-title {
+	margin-bottom: 0;
+	display: block;
+    color: #111;
+    font-size: 1em;
+    font-weight: 500;
+  }
+  
+  .modal-body {
+	position: relative;
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	padding: 1rem;
+  }
+  
+  .modal-footer {
+	padding: 1rem;
+	margin-top: 5px;
+    color: #828282;
+    font-size: 13px;
+  }
+  
+  .modal-scrollbar-measure {
+	position: absolute;
+	top: -9999px;
+	width: 50px;
+	height: 50px;
+	overflow: scroll;
+  }
+  
+  @media (min-width: 576px) {
+	.modal-dialog {
+	  max-width: 800px;
+	  margin: 1.75rem auto;
+	}
+	.modal-dialog-scrollable {
+	  max-height: calc(100% - 3.5rem);
+	}
+	.modal-dialog-scrollable .modal-content {
+	  max-height: calc(100vh - 3.5rem);
+	}
+	.modal-dialog-centered {
+	  min-height: calc(100% - 3.5rem);
+	}
+	.modal-dialog-centered::before {
+	  height: calc(100vh - 3.5rem);
+	}
+	.modal-sm {
+	  max-width: 300px;
+	}
+  }
+  button {
+	border-radius: 0;
+  }
+  
+  button:focus {
+	outline: 1px dotted;
+	outline: 5px auto -webkit-focus-ring-color;
+  }
+  
+  button {
+	margin: 0;
+	font-family: inherit;
+	font-size: inherit;
+	line-height: inherit;
+  }
+  
+  button,
+  input {
+	overflow: visible;
+  }
+  
+  button,
+  select {
+	text-transform: none;
+  }
+  
+  
+  button,
+  [type="button"],
+  [type="reset"],
+  [type="submit"] {
+	-webkit-appearance: button;
+  }
+  
+  
+  button.close {
+	padding: 0;
+	background-color: transparent;
+	border: 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+  }
+  
+  .btn {
+	display: inline-block;
+	height: 36px;
+	font-weight: 400;
+	color: #212529;
+	text-align: center;
+	vertical-align: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-color: transparent;
+	border: 0px solid transparent;
+	padding: 0.375rem 0.75rem;
+	font-size: 0.8rem;
+	line-height: 1.5;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	max-width: 100%;
+  }
+  
+  
+  .btn:hover {
+	color: #212529;
+	text-decoration: none;
+  }
+  
+  .btn:focus, .btn.focus {
+	outline: 0;
+  }
+  
+  .btn-primary {
+	color: #fff;
+	background-color: #900;
+  }
+  
+  .btn-primary:hover {
+	color: #fff;
+	background-color: #900;
+  }
+  
+  .btn-primary.disabled, .btn-primary:disabled {
+	color: #cacaca;
+	background-color: #859099;
+  }
+  
+  .btn-secondary {
+	color: #fff;
+	background-color: #6c757d;
+  }
+  
+  .btn-secondary:hover {
+	color: #fff;
+	background-color: #5a6268;
+  }
+  
+  .btn-secondary:focus, .btn-secondary.focus {
+	box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+  }
+  
+  .btn-secondary.disabled, .btn-secondary:disabled {
+	color: #fff;
+	background-color: #6c757d;
+  }
+  
