update rss api docs from rss docstrings. Fixes RH-63099. Fixes DOC-225, and a few others.

--- a/layouts/shortcodes/rhinoscriptsyntax.html
+++ b/layouts/shortcodes/rhinoscriptsyntax.html
@@ -23,7 +23,7 @@
 
       <h5>Returns:</h5>
       <div>
-        <pre style="white-space: pre-wrap;">{{ .ReturnStr }}</pre>
+        <pre style="white-space: pre-wrap;">{{ .Returns }}</pre>
       </div>
 
       {{ with .ExampleString }}
