Added a Google Analytics note for 4.

--- a/themes/rhino3d.com-theme/layouts/partials/js-scripts.html
+++ b/themes/rhino3d.com-theme/layouts/partials/js-scripts.html
@@ -16,7 +16,7 @@
       window.location.href = url;
     });
 </script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- GA3 tag that has been linked to the GA4 tag 357152258 Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-512742-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
