--- a/themes/rhino3d.com-theme/layouts/partials/footer.html
+++ b/themes/rhino3d.com-theme/layouts/partials/footer.html
@@ -34,7 +34,11 @@
         <a href="{{ .Site.Params.linkedinURL }}" class="fab fa-linkedin" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
         <a href="{{ .Site.Params.youtubeURL }}" class="fab fa-youtube" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
         <a href="{{ .Site.Params.vimeoURL }}" class="fab fa-vimeo" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
-        <a href="{{ .Site.Params.bloggerURL }}" class="fa" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"><img alt="Blogger icon" src="/images/blogger.svg"></a>
-        <a href="{{ .Site.Params.food4rhinoURL }}" class="fa" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"><img alt="Food4Rhino" src="/images/f4r_icon_01.svg" height="32" width="32"></a>
+        <a href="{{ .Site.Params.bloggerURL }}" class="fa"
+            style="padding: 10px; font-size: 30px; text-decoration: none;  display: inline-flex" target="_blank"
+            rel="noopener noreferrer"><img alt="Blogger icon" src="/images/blogger.svg"></a>
+        <a href="{{ .Site.Params.food4rhinoURL }}" class="fa"
+            style="padding: 10px; font-size: 30px; text-decoration: none;  display: inline-flex" target="_blank"
+            rel="noopener noreferrer"><img alt="Food4Rhino" src="/images/f4r_icon_01.svg" height="32" width="32"></a>
     </div>
 </div>
