--- a/themes/rhino3d.com-theme/layouts/features/single.html
+++ b/themes/rhino3d.com-theme/layouts/features/single.html
@@ -8,7 +8,7 @@
   <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
     {{/* partial "breadcrumbs.html" . */}}    
       <div class="feature-title-container">
-        <div class="feature-title">{{ .Page.Title }}</div>{{ if eq (int .Site.Params.latestRhinoVersion) (int .Params.included_in.since) }}<div class="new-callout"><a href="/{{ .Site.Params.latestRhinoVersion}}/new">{{ i18n "NEW-in-Vx" . }}</a></div>{{ end }}{{- partial "platform-callout" . -}}        
+        {{ if ne false (.Params.page_options.show_title) }}<div class="feature-title">{{ .Page.Title }}</div>{{ end }}{{ if eq (int .Site.Params.latestRhinoVersion) (int .Params.included_in.since) }}<div class="new-callout"><a href="/{{ .Site.Params.latestRhinoVersion}}/new">{{ i18n "NEW-in-Vx" . }}</a></div>{{ end }}{{- partial "platform-callout" . -}}        
       </div>
       <p>{{ partial "byline.html" . }}</p>
       {{ with .Page.Params.what_why }}
