--- a/themes/rhino3d.com-theme/layouts/learn/single.html
+++ b/themes/rhino3d.com-theme/layouts/learn/single.html
@@ -109,9 +109,9 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 </script>
-<script src="{{ (resources.Get "/script/vue-2.6.10.min.js" | resources.Fingerprint).Permalink }}"></script>
-<script src="{{ (resources.Get "/script/markdown-0.5.0.min.js" | resources.Fingerprint).Permalink }}"></script>
-<script type="text/javascript" src="{{ (resources.Get "/script/fast-toml.js" | resources.Fingerprint).Permalink }}">
+<script src='{{ (resources.Get "/script/vue-2.6.10.min.js" | resources.Fingerprint).Permalink }}'></script>
+<script src='{{ (resources.Get "/script/markdown-0.5.0.min.js" | resources.Fingerprint).Permalink }}'></script>
+<script type="text/javascript" src='{{ (resources.Get "/script/fast-toml.js" | resources.Fingerprint).Permalink }}'>
 </script>
 <script src="https://cdn.jsdelivr.net/npm/fuzzysort@2.0.1/fuzzysort.min.js"></script>
 {{/*  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>  */}}
@@ -433,10 +433,18 @@
                     embedUrl = ""
                     subtitles = pageLang == "en" ? "None" : pageLang
                     url = url.replace(/\/$/, '');
+                    console.log("url:", url)
                     if (url.startsWith("https://vimeo.com/") || url.startsWith("http://vimeo.com/")){
-                        if (url.includes("showcase") && !url.includes("video")){
+                        if (url.includes("showcase") && !url.includes("video") ){
                             return;
-                        }else{
+                        }
+                        else if(url.includes("ondemand")){
+                            return;
+                        }
+                        else if(url == "https://vimeo.com/rhino/videos"){
+                            return;
+                        }
+                        else{
                             videoId = url.substring(url.lastIndexOf('/') + 1);
                             embedUrl = "https://player.vimeo.com/video/"+videoId+"?autoplay=1&texttrack="+subtitles;
                         }
@@ -471,7 +479,13 @@
                         this.modalContent = url;
                     }
                     else{
-                        window.open(url, '_blank').focus();
+                        if (url.includes("download.mcneel.com")) {
+                            console.log("downloading pdf assign");
+                            window.location.assign(url);
+                        }
+                        else {
+                            window.open(url, '_blank').focus();
+                        }
                     }
                     this.forgetItem(event);
                 },
