--- a/themes/rhino3d.com-theme/layouts/partials/js-scripts.html
+++ b/themes/rhino3d.com-theme/layouts/partials/js-scripts.html
@@ -16,7 +16,7 @@
       window.location.href = url;
     });
 </script>
-<!-- GA3 tag that has been linked to the GA4 tag 357152258 Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-512742-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -53,6 +53,10 @@
 
 {{- if not .Params.page_options.disableDiscourseGallery -}}
   {{- partial "discourse-gallery-support" . }}
+{{- end -}}
+
+{{- if  .Params.page_options.model_viewer -}}
+{{- partial "model-viewer" . }}
 {{- end -}}
 
 {{/*  Homepage video  */}}
